fix: handle dark mode & adjust component spacing

--- a/packages/app/src/styles/global.css
+++ b/packages/app/src/styles/global.css
@@ -28,9 +28,6 @@
   .my-prose {
     @apply prose xl:prose-lg dark:prose-invert prose-figcaption:text-center max-w-none;
   }
-  .article-component-container {
-    @apply py-20;
-  }
   .skeleton {
     @apply relative overflow-hidden rounded-md bg-gray-200 dark:bg-gray-700;
   }
